<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Video2Text">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:background="#eeee"
        android:fontFamily="sans-serif-black"
        android:text="@string/gesture_translator_beta"
        android:textColor="#939292"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />


    <ImageView
        android:id="@+id/languagesMenu"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/language_newsize_foreground" />



    <TextView
        android:id="@+id/out_trans_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edittext"
        android:text="@string/translation_of_the_video"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/trans_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/out_voice_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/translation_audio"
        android:src="@drawable/ic_baseline_graphic_eq_24"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <VideoView
        android:id="@+id/record_videoView"
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesMenu" />

    <ImageButton
        android:id="@+id/previousBtn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-110dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/out_trans_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_videoView" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="-110dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toTopOf="@+id/out_trans_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_videoView" />

    <Button
        android:id="@+id/trans_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background"
        android:elevation="2dp"
        android:src="@drawable/baseline_translate_24"
        android:text="@string/translate"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintStart_toEndOf="@+id/out_voice_button" />

    <ImageButton
        android:id="@+id/videoButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/open_video"
        android:src="@drawable/ic_baseline_video_camera_back_24"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_button_background"
        android:contentDescription="@string/open_gallery"
        android:src="@drawable/ic_video_library"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toStartOf="@+id/videoButton" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_background"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="selected"
        app:itemBackground="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>