<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingMain">

    <TextView
        android:id="@+id/subTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/onboarding_slide1_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorBlueMidnight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:src="@drawable/image1"
        app:layout_constraintDimensionRatio="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitleTv"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/descTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_slide1_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlueMidnight"
        app:layout_constraintEnd_toEndOf="@+id/img"
        app:layout_constraintStart_toStartOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/img" />


    <TextView
        android:id="@+id/nextBoardBtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:background="@color/colorWhite"
        android:paddingTop="10dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#7C4DFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/skipBoardBtn"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:background="@color/colorWhite"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="#7C4DFF"
        android:textSize="20sp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>